scrollbar fix

--- a/style.css
+++ b/style.css
@@ -473,9 +473,13 @@ button {
   padding: 48px 0px 60px 35px;
 }
 
+.our-team .container {
+  padding-right: 0;
+}
+
 .our-team-card-wrapper {
   display: flex;
-  column-gap: 26px;
+  column-gap: 32px;
   overflow: hidden;
   /* overflow-x: visible; */
 }
@@ -706,6 +710,10 @@ button {
 
   .our-products-wrapper {
     margin-block: 40px;
+  }
+
+  .our-products-wrapper .container {
+    padding-right: 5px;
   }
 
   .our-product-logo img {
